--- a/MovieReviewApi/appsettings.json
+++ b/MovieReviewApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+/*
+  "ConnectionString": {
+    "MovieReview": "Data Source=DESKTOP-1B4R2U4;Initial Catalog=MovieReview;Integrated Security=True;Trust Server Certificate=True;"
+  },*/
   "Logging": {
     "LogLevel": {
       "Default": "Information",
